assets/css/style.css
/* ... */
#bloc-1-hero h1 {
    font-size: 2.6rem;
    font-family: "Open Sans";
}
p {
    font-size: 1.5rem;
    
}
.tc-white {
    color: #F3976C!important;
}
.tc-yellow {
    color: rgb(252,207,111) !important;
}
.bloc {
    clear: both;
    position: relative;
    width: 100%;
    padding: 0 50px;
    background: 50% 50% no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.bloc .container {
    padding-right: 0;
    padding-left: 0;
}
.bloc-lg {
    padding: 100px 50px;
}
.bloc-md {
    padding: 50px;
}
.bloc-sm {
    padding: 20px 50px;
}
.bg-center,
.bg-l-edge,
.bg-r-edge,
.bg-t-edge,
.bg-b-edge,
.bg-tl-edge,
.bg-bl-edge,
.bg-tr-edge,
.bg-br-edge,
.bg-repeat {
    -webkit-background-size: auto!important;
    -moz-background-size: auto!important;
    background-size: auto!important;
    -o-background-size: auto!important;
}
.bg-repeat {
    background: repeat;
}
.bg-t-edge {
    background: top no-repeat;
}
.bloc-bg-texture::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-size: 2px 2px;
}
.texture-paper::before {
    background: url(../img/texture-paper.png);
    background-size: 280px 280px;
}
.b-parallax {
    background-attachment: fixed;
}
.d-bloc {
    color: rgba(255,255,255,.7);
}
.d-bloc button:hover {
    color: rgba(255,255,255,.9);
}
.d-bloc .icon-round,
.d-bloc .icon-square,
.d-bloc .icon-rounded,
.d-bloc .icon-semi-rounded-a,
.d-bloc .icon-semi-rounded-b {
    border-color: rgba(255,255,255,.9);
}
.d-bloc .divider-h span {
    border-color: rgba(255,255,255,.2);
}
.d-bloc .a-btn,
.d-bloc .navbar a,
.d-bloc .navbar-brand,
.d-bloc a .icon-sm,
.d-bloc a .icon-md,
.d-bloc a .icon-lg,
.d-bloc a .icon-xl,
.d-bloc h1 a,
.d-bloc h2 a,
.d-bloc h3 a,
.d-bloc p a {
    color: rgba(255,255,255,.6);
}
.d-bloc .a-btn:hover,
.d-bloc .navbar a:hover,
.d-bloc .navbar-brand:hover,
.d-bloc a:hover .icon-sm,
.d-bloc a:hover .icon-md,
.d-bloc a:hover .icon-lg,
.d-bloc a:hover .icon-xl,
.d-bloc h1 a:hover,
.d-bloc h2 a:hover,
.d-bloc h3 a:hover,
.d-bloc p a:hover {
    color: rgba(255,255,255,1);
}
.d-bloc .navbar-toggle .icon-bar {
    background: rgba(255,255,255,1);
}
.d-bloc .btn-wire,
.d-bloc .btn-wire:hover {
    border-color: rgba(255,255,255,1);
    color: rgba(255,255,255,1);
}
.d-bloc .panel {
    color: rgba(0,0,0,.5);
}
.d-bloc .panel button:hover {
    color: rgba(0,0,0,.7);
}
.d-bloc .panel icon {
    border-color: rgba(0,0,0,.7);
}
.d-bloc .panel .divider-h span {
    border-color: rgba(0,0,0,.1);
}
.d-bloc .panel .a-btn {
    color: rgba(0,0,0,.6);
}
.d-bloc .panel .a-btn:hover {
    color: rgba(0,0,0,1);
}
.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover {
    border-color: rgba(0,0,0,.3);
    color: rgba(0,0,0,.7);
}
.d-bloc .panel,
.l-bloc {
    color: rgba(0,0,0,.5);
}
.d-bloc .panel button:hover,
.l-bloc button:hover {
    color: rgba(0,0,0,.7);
}
.l-bloc .icon-round,
.l-bloc .icon-square,
.l-bloc .icon-rounded,
.l-bloc .icon-semi-rounded-a,
.l-bloc .icon-semi-rounded-b {
    border-color: rgba(0,0,0,.7);
}
.d-bloc .panel .divider-h span,
.l-bloc .divider-h span {
    border-color: rgba(0,0,0,.1);
}
.d-bloc .panel .a-btn,
.l-bloc .a-btn,
.l-bloc .navbar a,
.l-bloc .navbar-brand,
.l-bloc a .icon-sm,
.l-bloc a .icon-md,
.l-bloc a .icon-lg,
.l-bloc a .icon-xl,
.l-bloc h1 a,
.l-bloc h2 a,
.l-bloc h3 a,
.l-bloc p a {
    color: rgba(0,0,0,.6);
}
.d-bloc .panel .a-btn:hover,
.l-bloc .a-btn:hover,
.l-bloc .navbar a:hover,
.l-bloc .navbar-brand:hover,
.l-bloc a:hover .icon-sm,
.l-bloc a:hover .icon-md,
.l-bloc a:hover .icon-lg,
.l-bloc a:hover .icon-xl,
.l-bloc h1 a:hover,
.l-bloc h2 a:hover,
.l-bloc h3 a:hover,
.l-bloc p a:hover {
    color: rgba(0,0,0,1);
}
.l-bloc .navbar-toggle .icon-bar {
    color: rgba(0,0,0,.6);
}
.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover,
.l-bloc .btn-wire,
.l-bloc .btn-wire:hover {
    border-color: rgba(0,0,0,.3);
    color: rgba(0,0,0,.7);
}
.voffset {
    margin-top: 30px;
}
.voffset-lg {
    margin-top: 80px;
}
.row-no-gutters {
    margin-right: 0;
    margin-left: 0;
}
.row.row-no-gutters > [class^="col-"],
.row.row-no-gutters > [class*=" col-"] {
    padding-right: 0;
    padding-left: 0;
}
.navbar {
    z-index: 1;
    margin-bottom: 0;
}
.navbar-brand {
    height: auto;
    padding: 3px 3px;
    font-size: 25px;
    font-weight: 400;
    font-weight: 600;
    line-height: 44px;
}
.navbar-brand img {
    display: inline;
    margin: 0 5px 0 0;
    max-height: 200px;
}
.navbar-brand img[src$=svg] {
    min-width: 100px;
}
.nav-center .navbar-brand img {
    margin: 0;
}
.navbar .nav {
    z-index: 1;
    float: right;
    margin-right: -16px;
    padding-top: 2px;
}
.nav > li {
    float: left;
    margin-top: 4px;
    font-size: 16px;
}
.navbar-nav .open .dropdown-menu > li > a {
    text-align: inherit;
}
.nav > li a:hover,
.nav > li a:focus {
    background: transparent;
}
.navbar-toggle {
    margin: 10px 10px 0 0;
    border: 0;
}
.navbar-toggle:hover {
    background: transparent!important;
}
.navbar-toggle .icon-bar {
    width: 26px;
    background-color: rgba(0,0,0,.5);
}
.nav-invert .navbar .nav {
    float: left;
}
.navbar-header a {
    display: flex;
}
.navbar-header p {
    padding: 0!important;
    font-family: 'Viaoda Libre',cursive;
    font-size: 25px;
    color: black!important;
}
.nav-invert .navbar-header,
.nav-invert .navbar-brand {
    z-index: 2;
    float: right;
    position: relative;
}
.nav > li > .dropdown a {
	background: none!important;
    display: block;
    padding: 14px 15px;    
}
nav .caret {
    margin: 0 5px;
}
.dropdown-menu .dropdown-menu {
    top: -8px;
    left: 100%;
}
.dropdown-menu .dropmenu-flow-right {
    top: 100%;
    left: 0;
    margin-left: -1px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
/* ... */

